syntax = "proto3";

option go_package = "github.com/kong/koko/internal/gen/grpc/kong/admin/model/v1;v1";

package kong.admin.model.v1;

message Consumer {
  string id = 1;
  string username = 2;
  int32 created_at = 3;
  int32 updated_at = 4;
  string custom_id = 5;
  repeated string tags = 6;
}